docs/example/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: karma
  namespace: monitoring
  labels:
    app.kubernetes.io/name: karma
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: karma
  template:
    metadata:
      labels:
        app.kubernetes.io/name: karma
    spec:
      serviceAccountName: karma
      containers:
        - name: karma
          image: "quay.io/giantswarm/karma:v0.77"
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          resources:
          volumeMounts:
            - name: karma-config
              mountPath: /etc/karma
      volumes:
      - name: karma-config
        configMap:
          name: karma-config
