docs/example/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: karma
  namespace: monitoring
  labels:
    app.kubernetes.io/name: karma
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: karma
